--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -97,37 +97,30 @@
 	 * Block border layout
 	 */
 
-	.block-editor-block-list__block-edit {
-		position: relative;
-		&.has-mover-inside > [data-block] {
-			display: flex;
-		}
+	&::before {
+		z-index: z-index(".block-editor-block-list__block-edit::before");
+		content: "";
+		position: absolute;
+		border: $border-width solid transparent;
+		border-left: none;
+		box-shadow: none;
+		pointer-events: none;
+		transition: border-color 0.1s linear, border-style 0.1s linear, box-shadow 0.1s linear;
+		@include reduce-motion("transition");
 
-		&::before {
-			z-index: z-index(".block-editor-block-list__block-edit::before");
-			content: "";
-			position: absolute;
-			border: $border-width solid transparent;
-			border-left: none;
-			box-shadow: none;
-			pointer-events: none;
-			transition: border-color 0.1s linear, border-style 0.1s linear, box-shadow 0.1s linear;
-			@include reduce-motion("transition");
+		// Include a transparent outline for Windows High Contrast mode.
+		outline: $border-width solid transparent;
 
-			// Include a transparent outline for Windows High Contrast mode.
-			outline: $border-width solid transparent;
-
-			// Go edge-to-edge on mobile.
-			right: -$block-padding;
-			left: -$block-padding;
-			top: -$block-padding;
-			bottom: -$block-padding;
-		}
+		// Go edge-to-edge on mobile.
+		right: -$block-padding;
+		left: -$block-padding;
+		top: -$block-padding;
+		bottom: -$block-padding;
 	}
 
 	// Selected style.
 	&.is-selected {
-		> .block-editor-block-list__block-edit::before {
+		&::before {
 			// Use opacity to work in various editor styles.
 			border-color: $dark-opacity-light-800;
 			box-shadow: inset $block-left-border-width 0 0 0 $dark-gray-500;
@@ -147,7 +140,7 @@
 			}
 		}
 
-		&.is-navigate-mode > .block-editor-block-list__block-edit::before {
+		&.is-navigate-mode::before {
 			border-color: $blue-medium-focus;
 			box-shadow: inset $block-left-border-width 0 0 0 $blue-medium-focus;
 
@@ -158,7 +151,7 @@
 	}
 
 	// Hover style.
-	&.is-hovered:not(.is-navigate-mode) > .block-editor-block-list__block-edit::before {
+	&.is-hovered:not(.is-navigate-mode)::before {
 		box-shadow: -$block-left-border-width 0 0 0 $dark-opacity-light-500;
 
 		.is-dark-theme & {
@@ -190,7 +183,7 @@
 	// To indicate multiple blocks, we provide an additional selection indicator.
 	.block-editor-block-list__block.is-multi-selected {
 
-		> .block-editor-block-list__block-edit::before {
+		&::before {
 			border-left-color: $dark-opacity-light-800;
 			box-shadow: inset $block-left-border-width 0 0 0 $dark-gray-500;
 
@@ -211,7 +204,7 @@
 	}
 
 	// The additional marker, we limit only to top level blocks.
-	.block-editor-block-list__block.is-multi-selected .block-editor-block-list__block.is-multi-selected > .block-editor-block-list__block-edit::before {
+	.block-editor-block-list__block.is-multi-selected .block-editor-block-list__block.is-multi-selected::before {
 		box-shadow: none;
 	}
 
@@ -234,7 +227,7 @@
 	}
 
 	// Warnings
-	&.has-warning .block-editor-block-list__block-edit {
+	&.has-warning {
 		// When a block has a warning, you shouldn't be able to manipulate the contents.
 		> * {
 			pointer-events: none;
@@ -247,7 +240,7 @@
 		}
 	}
 
-	&.has-warning .block-editor-block-list__block-edit::before {
+	&.has-warning::before {
 		// Use opacity to work in various editor styles.
 		border-color: $dark-opacity-light-500;
 		border-left: $border-width solid $dark-opacity-light-500;
@@ -257,7 +250,7 @@
 		}
 	}
 
-	&.has-warning.is-selected .block-editor-block-list__block-edit::before {
+	&.has-warning.is-selected::before {
 		// Use opacity to work in various editor styles.
 		border-color: $dark-opacity-light-800;
 		border-left-color: transparent;
@@ -267,7 +260,7 @@
 		}
 	}
 
-	&.has-warning .block-editor-block-list__block-edit::after {
+	&.has-warning::after {
 		content: "";
 		position: absolute;
 		background-color: rgba($light-gray-100, 0.4);
@@ -279,11 +272,11 @@
 	}
 
 	// Avoid conflict with the multi-selection highlight color.
-	&.has-warning.is-multi-selected .block-editor-block-list__block-edit::after {
+	&.has-warning.is-multi-selected::after {
 		background-color: transparent;
 	}
 
-	&.has-warning.is-selected .block-editor-block-list__block-edit::after {
+	&.has-warning.is-selected::after {
 		bottom: ( $block-toolbar-height - $block-padding - $border-width );
 
 		@include break-small() {
@@ -302,7 +295,7 @@
 	}
 
 	// Reusable blocks.
-	&.is-reusable > .block-editor-block-list__block-edit::before {
+	&.is-reusable::before {
 		border: $border-width dashed $dark-opacity-light-500;
 
 		.is-dark-theme & {
@@ -310,7 +303,7 @@
 		}
 	}
 
-	&.is-reusable.is-selected > .block-editor-block-list__block-edit::before {
+	&.is-reusable.is-selected::before {
 		// Use opacity to work in various editor styles.
 		border-color: $dark-opacity-light-800;
 		border-left-color: transparent;
@@ -322,7 +315,7 @@
 	}
 
 	// Reusable Blocks clickthrough overlays.
-	&.is-reusable > .block-editor-block-list__block-edit .block-editor-inner-blocks.has-overlay {
+	&.is-reusable .block-editor-inner-blocks.has-overlay {
 		// Remove only the top click overlay.
 		&::after {
 			display: none;
@@ -346,14 +339,12 @@
 		height: 0;
 
 		// Hide block border when an image is floated.
-		.block-editor-block-list__block-edit {
-			&::before {
-				content: none;
-			}
-
-			// This margin won't collapse on its own, so zero it out.
-			margin-top: 0;
+		&::before {
+			content: none;
 		}
+
+		// This margin won't collapse on its own, so zero it out.
+		margin-top: 0;
 
 		// Keep a 1px margin to compensate for the border/outline.
 		.block-editor-block-contextual-toolbar {
@@ -394,12 +385,10 @@
 	// Left.
 	&[data-align="left"] {
 		// This is in the editor only; the image should be floated on the frontend.
-		> .block-editor-block-list__block-edit {
-			/*!rtl:begin:ignore*/
-			float: left;
-			margin-right: 2em;
-			/*!rtl:end:ignore*/
-		}
+		/*!rtl:begin:ignore*/
+		float: left;
+		margin-right: 2em;
+		/*!rtl:end:ignore*/
 
 		// Align block toolbar to floated content.
 		@include break-small() {
@@ -415,12 +404,10 @@
 	// Right.
 	&[data-align="right"] {
 		// Right: This is in the editor only; the image should be floated on the frontend.
-		> .block-editor-block-list__block-edit {
-			/*!rtl:begin:ignore*/
-			float: right;
-			margin-left: 2em;
-			/*!rtl:end:ignore*/
-		}
+		/*!rtl:begin:ignore*/
+		float: right;
+		margin-left: 2em;
+		/*!rtl:end:ignore*/
 
 		// Align block toolbar to floated content.
 		@include break-small() {
@@ -601,73 +588,61 @@
  * Mobile unified toolbar.
  */
 
-.block-editor-block-list__block {
+// Show side UI inline below the block on mobile.
+.block-editor-block-list__block-mobile-toolbar {
+	display: flex;
+	flex-direction: row;
 
-	// Show side UI inline below the block on mobile.
-	.block-editor-block-list__block-mobile-toolbar {
-		display: flex;
-		flex-direction: row;
+	// Make room for the height of the block toolbar above.
+	transform: translateY($block-padding + $border-width);
+	border-top: $border-width solid $light-gray-800;
+	height: $block-toolbar-height;
 
-		// Make room for the height of the block toolbar above.
-		transform: translateY($block-padding + $border-width);
-		margin-top: $block-toolbar-height;
-		margin-right: -$block-padding;
-		margin-left: -$block-padding;
-		border-top: $border-width solid $light-gray-800;
-		height: $block-toolbar-height;
+	@include break-small() {
+		display: none;
+	}
 
-		@include break-small() {
-			display: none;
-		}
+	// Add a white background to prevent the block's left border from showing through.
+	background-color: $white;
 
-		// Add a white background to prevent the block's left border from showing through.
-		background-color: $white;
+	// Show a shadow below the selected block to imply separation.
+	box-shadow: $shadow-below-only;
+	@include break-small() {
+		box-shadow: none;
+	}
 
-		// Show a shadow below the selected block to imply separation.
-		box-shadow: $shadow-below-only;
-		@include break-small() {
-			box-shadow: none;
-		}
+	// Movers, inserter, trash, and ellipsis.
+	.block-editor-inserter {
+		position: relative;
+		left: auto;
+		top: auto;
+		margin: 0;
+	}
 
-		// Movers, inserter, trash, and ellipsis.
-		.block-editor-inserter {
-			position: relative;
-			left: auto;
-			top: auto;
-			margin: 0;
-		}
+	.block-editor-inserter__toggle,
+	.block-editor-block-mover__control {
+		width: $icon-button-size;
+		height: $icon-button-size;
+		border-radius: $radius-round-rectangle;
+		padding: 3px;
+		margin: 0;
+		justify-content: center;
+		align-items: center;
 
-		.block-editor-inserter__toggle,
-		.block-editor-block-mover__control {
-			width: $icon-button-size;
-			height: $icon-button-size;
-			border-radius: $radius-round-rectangle;
-			padding: 3px;
-			margin: 0;
-			justify-content: center;
-			align-items: center;
-
-			.dashicon {
-				margin: auto;
-			}
-		}
-
-		// Movers
-		.block-editor-block-mover {
-			display: flex;
-			margin-right: auto;
-
-			.block-editor-inserter,
-			.block-editor-block-mover__control {
-				float: left;
-			}
+		.dashicon {
+			margin: auto;
 		}
 	}
 
-	// Reset negative margins on mobile for full-width.
-	&[data-align="full"] .block-editor-block-list__block-mobile-toolbar {
-		margin-left: 0;
-		margin-right: 0;
+	// Movers
+	.block-editor-block-mover {
+		display: flex;
+		margin-right: auto;
+
+		.block-editor-inserter,
+		.block-editor-block-mover__control {
+			float: left;
+		}
 	}
 }
 
@@ -686,7 +661,6 @@
 .block-editor-block-list__insertion-point {
 	position: relative;
 	z-index: z-index(".block-editor-block-list__insertion-point");
-	margin-top: -$block-padding;
 }
 
 .block-editor-block-list__insertion-point-indicator {
@@ -707,11 +681,11 @@
 	}
 
 	position: absolute;
-	bottom: auto;
+	bottom: -100%;
 	left: 0;
 	right: 0;
 	justify-content: center;
-	height: $block-padding + 8px;
+	height: 2 * $block-padding;
 
 	// Show a clickable plus.
 	.block-editor-inserter__toggle {
@@ -808,7 +782,6 @@
 		pointer-events: none;
 
 		// Position toolbar below the block on mobile.
-		position: absolute;
 		bottom: $block-toolbar-height - $block-padding - $border-width;
 		left: -$block-padding;
 		right: -$block-padding;
@@ -945,7 +918,7 @@
 		border-right: none;
 
 		// This prevents floats from messing up the position of the block toolbar on floats-adjacent blocks when selected.
-		position: absolute;
+		// position: absolute;
 		left: $border-width;
 		top: $border-width;
 	}
@@ -962,8 +935,9 @@
 	z-index: z-index(".block-editor-block-list__breadcrumb");
 
 	// Position in the top left of the border.
-	left: -$block-padding;
-	top: -$block-toolbar-height - $block-padding;
+	// To do: fix magir numbers.
+	left: -$block-left-border-width + 1;
+	top: -$block-padding - 5;
 
 	.components-toolbar {
 		display: flex;
@@ -1041,4 +1015,22 @@
 		// solves this.
 		margin-bottom: auto;
 	}
+}
+
+.components-popover.block-editor-block-list__block__popover .components-popover__content {
+	min-width: auto;
+	background: none;
+	border: none;
+	box-shadow: none;
+	overflow-y: visible;
+}
+
+.components-popover.block-editor-block-list__block__popover[data-x-axis="right"] .components-popover__content {
+	margin-left: -15px !important;
+	margin-bottom: 14px !important;
+}
+
+.block-editor-block-list__block__popover-with-shortcuts .components-popover__content {
+	left: auto !important;
+	right: 0;
 }
